test/corpus/exclude/sany/regression.txt
=============|||
Nonfix Double Exclamation Operator (TSTLA#97)
=============|||

---- MODULE Test ----
op == A!!!(1,2)
op == A!B!!!(1,2)
op == A!!! !!!(1,2)
op == !! !!! !!! !!! !!!(1,2)
op == A !! B
op ==
  /\ A
  /\ B
  !! C
op ==
  /\ A
  /\ B
   !! C
====

--------------|||

(source_file (module (header_line) name: (identifier) (header_line)
  (operator_definition name: (identifier) (def_eq) definition:
    (prefixed_op prefix: (subexpr_prefix (subexpr_component (identifier_ref))) op:
      (bound_nonfix_op symbol: (infix_op_symbol (excl)) (nat_number) (nat_number)))
  )
  (operator_definition name: (identifier) (def_eq) definition:
    (prefixed_op
      prefix: (subexpr_prefix
        (subexpr_component (identifier_ref))
        (subexpr_component (identifier_ref))
      )
      op: (bound_nonfix_op symbol: (infix_op_symbol (excl)) (nat_number) (nat_number)))
  )
  (operator_definition name: (identifier) (def_eq) definition:
    (prefixed_op
      prefix: (subexpr_prefix
        (subexpr_component (identifier_ref))
        (subexpr_component (infix_op_symbol (excl)))
      )
      op: (bound_nonfix_op symbol: (infix_op_symbol (excl)) (nat_number) (nat_number)))
  )
  (operator_definition name: (identifier) (def_eq) definition:
    (prefixed_op
      prefix: (subexpr_prefix
        (subexpr_component (infix_op_symbol (excl)))
        (subexpr_component (infix_op_symbol (excl)))
        (subexpr_component (infix_op_symbol (excl)))
        (subexpr_component (infix_op_symbol (excl)))
      )
      op: (bound_nonfix_op symbol: (infix_op_symbol (excl)) (nat_number) (nat_number)))
  )
  (operator_definition name: (identifier) (def_eq) definition:
    (bound_infix_op lhs: (identifier_ref) symbol: (excl) rhs: (identifier_ref))
  )
  (operator_definition name: (identifier) (def_eq) definition:
    (bound_infix_op
      lhs: (conj_list
        (conj_item (bullet_conj) (identifier_ref))
        (conj_item (bullet_conj) (identifier_ref))
      )
      symbol: (excl)
      rhs: (identifier_ref)
    )
  )
  (operator_definition name: (identifier) (def_eq) definition:
    (conj_list
      (conj_item (bullet_conj) (identifier_ref))
      (conj_item (bullet_conj)
        (bound_infix_op lhs: (identifier_ref) symbol: (excl) rhs: (identifier_ref))
      )
    )
  )
(double_line)))
