test/corpus/modules.txt
=============|||
Single module
=============|||

---- MODULE Test ----
====

-------------|||

(source_file
  (module (identifier))
)

=============|||
Nested modules
=============|||

---- MODULE Test ----
---- MODULE Inner ----
====
====

-------------|||

(source_file
  (module (identifier)
    (unit
      (module (identifier))
    )
  )
)